# src/db/schema/business-addresses.schema.ts
@@ -1,5 +1,7 @@
 import { relations } from "drizzle-orm";
-import { real, sqliteTable, text } from "drizzle-orm/sqlite-core";
+import { integer, real, sqliteTable, text } from "drizzle-orm/sqlite-core";
+import { createSelectSchema } from "drizzle-zod";
+import z from "zod";
 import { businesses } from "./businesses.schema";
 
 export const businessAddresses = sqliteTable("business_addresses", {
@@ -12,7 +14,7 @@ export const businessAddresses = sqliteTable("business_addresses", {
 
     city: text("city").notNull(),
     state: text("state").notNull(),
-    pincode: text("pincode").notNull(),
+    pincode: integer("pincode").notNull(),
 
     latitude: real("latitude").notNull(),
     longitude: real("longitude").notNull(),
@@ -33,3 +35,22 @@ export const businessListingAddressRelations = relations(
         }),
     }),
 );
+
+export const businessAddressSchema = createSelectSchema(businessAddresses, {
+    businessId: z.uuid(),
+
+    completeAddress: z.string(),
+
+    city: z.string(),
+    state: z.string(),
+    pincode: z.number().min(111111).max(999999),
+
+    latitude: z.number(),
+    longitude: z.number(),
+
+    minLatitude: z.number(),
+    minLongitude: z.number(),
+
+    maxLatitude: z.number(),
+    maxLongitude: z.number(),
+});
